--- a/arxiv/2023_07_arxiv.html
+++ b/arxiv/2023_07_arxiv.html
@@ -95,6 +95,48 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.05654">https://arxiv.org/abs/2107.05654</a></span> Exact effective action for the O(N) vector model in the large N limit ***** (Han Ma, Sung-Sik Lee)</p>
 <p class="p3"><a href="https://arxiv.org/abs/2304.08311">https://arxiv.org/abs/2304.08311</a><span class="s2"> A Review on Octupolar Tensors</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00195">https://arxiv.org/abs/2212.00195</a></span> INTRODUCTION TO TOPOLOGICAL SYMMETRY IN QFT ***** (DANIEL S. FREED)</p>
+<br>
+<p class="p1">20230710</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03653">https://arxiv.org/abs/2307.03653</a></span> Spinor bosons realization of the SU(3) Haldane phase with adjoint representation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03658">https://arxiv.org/abs/2307.03658</a></span> The PointGroupNRG code for numerical renormalization group calculations with discrete point-group symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03223">https://arxiv.org/abs/2307.03223</a></span> Neural Network Field Theories: Non-Gaussianity, Actions, and Locality ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03231">https://arxiv.org/abs/2307.03231</a></span> Superconformal indices for non-Lagrangian theories in five dimensions ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230711</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03825">https://arxiv.org/abs/2307.03825</a></span> Geometric Phases in Open Quantum Systems: Analysis and Applications</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03889">https://arxiv.org/abs/2307.03889</a></span> Quantum techniques for eigenvalue problems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04267">https://arxiv.org/abs/2307.04267</a></span> Phase transitions in sampling and error correction in local Brownian circuits (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04696">https://arxiv.org/abs/2307.04696</a></span> Aufbau Principle for Non-Hermitian Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03769">https://arxiv.org/abs/2307.03769</a></span> Deep thermalization in constrained quantum systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03831">https://arxiv.org/abs/2307.03831</a></span> Integrability from categorification</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04433">https://arxiv.org/abs/2307.04433</a></span> Holographic Gubser-Rocha model does not capture all the transport anomalies of strange metals</p>
+<p class="p2"><br></p>
+<p class="p1">20230712</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05477">https://arxiv.org/abs/2307.05477</a></span> Wiedemann-Franz law in graphene in the presence of a weak magnetic field *** (Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05165">https://arxiv.org/abs/2307.05165</a></span> The φ4 lattice model with cubic symmetry in three dimensions: RG-flow and first order phase transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05307">https://arxiv.org/abs/2307.05307</a></span> Phases of (2+1)D SO(5) non-linear sigma model with a topological term on a sphere: multicritical point and disorder phase *** (Bin-Bin Chen, Xu Zhang, Yuxuan Wang, Kai Sun, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05456">https://arxiv.org/abs/2307.05456</a></span> Many-Body Bound States in the Continuum *** (Shoki Sugimoto, Yuto Ashida, Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04792">https://arxiv.org/abs/2307.04792</a></span> Generalized Hall current on a finite lattice ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04788">https://arxiv.org/abs/2307.04788</a></span> Intrinsically/Purely Gapless-SPT from Non-Invertible Duality Transformations **** (Masaki Oshikawa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05395">https://arxiv.org/abs/2307.05395</a></span> Graphene is neither Relativistic nor Non-Relativistic case: Thermodynamics Aspects</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05474">https://arxiv.org/abs/2307.05474</a></span> Fractonic Higher-Order Topological Phases in Open Quantum Systems **** (Zhen Bi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.11221">https://arxiv.org/abs/2203.11221</a></span> Nematic phases and elastoresistivity from a multiorbital non-Fermi liquid (Andrew Hardy, Arun Paramekanti)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.04896">https://arxiv.org/abs/2307.04896</a></span> AN ABSTRACT FORMULATION OF THE FLAT BAND CONDITION **</p>
+<p class="p2"><br></p>
+<p class="p1">20230713</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05743">https://arxiv.org/abs/2307.05743</a></span> An exactly solvable dissipative spin liquid *** (Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.05676">https://arxiv.org/abs/2307.05676</a></span> Mott insulators in moiré transition metal dichalcogenides at fractional fillings: Slave-rotor mean-field theory (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.15682">https://arxiv.org/abs/2211.15682</a></span> Kondo lattice model in magic-angle twisted bilayer graphene ***** (Yang-Zhi Chou, Sankar Das Sarma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.09803">https://arxiv.org/abs/2211.09803</a></span> Exact Quantum Algorithms for Quantum Phase Recognition: Renormalization Group and Error Correction ****** (Ethan Lake, Shankar Balasubramanian, Soonwon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.11190">https://arxiv.org/abs/2205.11190</a></span> Boundary conditions and anomalies of conformal field theories in 1+1 dimensions *** (Linhao Li, Chang-Tse Hsieh, Yuan Yao, Masaki Oshikawa)</p>
+<p class="p2"><br></p>
+<p class="p1">20230714</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.06841">https://arxiv.org/abs/2307.06841</a></span> Emergent Supersymmetry at Large N ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.06365">https://arxiv.org/abs/2307.06365</a></span> Building crystalline topological superconductors from Shiba lattices *** (Titus Neupert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11218">https://arxiv.org/abs/2306.11218</a></span> Kramers’ degenerate magnetism and superconductivity **** (Daniel F. Agterberg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10105">https://arxiv.org/abs/2306.10105</a></span> A no-go result for implementing chiral symmetries by locality-preserving unitaries in a 3-dimensional Hamiltonian lattice model of fermions **** (Lukasz Fidkowski, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities **** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.05771">https://arxiv.org/abs/2211.05771</a> </span>Multi-criticality and field induced non-BEC transitions in frustrated magnets **** (Shouvik Sur1, Andriy H. Nevidomskyy)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
