--- a/arxiv/2023_07_arxiv.html
+++ b/arxiv/2023_07_arxiv.html
@@ -137,6 +137,49 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.10105">https://arxiv.org/abs/2306.10105</a></span> A no-go result for implementing chiral symmetries by locality-preserving unitaries in a 3-dimensional Hamiltonian lattice model of fermions **** (Lukasz Fidkowski, Cenke Xu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.10775">https://arxiv.org/abs/2301.10775</a></span> Collisionless dynamics of general non-Fermi liquids from hydrodynamics of emergent conserved quantities **** (Dominic V. Else)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.05771">https://arxiv.org/abs/2211.05771</a> </span>Multi-criticality and field induced non-BEC transitions in frustrated magnets **** (Shouvik Sur1, Andriy H. Nevidomskyy)</p>
+<br>
+<p class="p1">20230717</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.07479">https://arxiv.org/abs/2307.07479</a></span> Rigorous Wilsonian Renormalization Group for impurity models with a spectral gap ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.00895">https://arxiv.org/abs/2302.00895</a></span> Spin-Driven Stationary Turbulence in Spinor Bose-Einstein Condensates *** (Seji Kang, Y. Shin)</p>
+<p class="p2"><br></p>
+<p class="p1">20230718</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08147">https://arxiv.org/abs/2307.08147</a></span> WHAT IS AN ANOMALY? *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08017">https://arxiv.org/abs/2307.08017</a></span> Emergent electric field from magnetic resonances in a one-dimensional chiral magnet (Yukitoshi Motome)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.07612">https://arxiv.org/abs/2307.07612</a></span> Avalanche Instability as Nonequilibrium Quantum Criticality *** (Jong E. Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.07613">https://arxiv.org/abs/2307.07613</a></span> Phases and Exotic Phase Transitions of a Two-Dimensional Su-Schrieffer-Heeger Model (Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08083">https://arxiv.org/abs/2307.08083</a></span> Generating function for projected entangled-pair states *** (Hyun-Yong Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08611">https://arxiv.org/abs/2307.08611</a></span> Test for BCS-BEC Crossover in the Cuprate Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.03865">https://arxiv.org/abs/2305.03865</a></span> Strong-Field Physics in QED and QCD: From Fundamentals to Applications ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.07547">https://arxiv.org/abs/2307.07547</a></span> Lectures on Generalized Symmetries ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1812.01986">https://arxiv.org/abs/1812.01986</a></span> Ultraviolet Complete Quantum Field Theory and Particle Model</p>
+<p class="p2"><br></p>
+<p class="p1">20230719</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08750">https://arxiv.org/abs/2307.08750</a></span> Dynamical localization transition in the non-Hermitian Z2 gauge theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08808">https://arxiv.org/abs/2307.08808</a></span> Superfluid phase transition of nanoscale-confined helium-3 **** (Igor Boettcher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09431">https://arxiv.org/abs/2307.09431</a></span> Metallic quantum criticality enabled by flat bands in a kagome lattice ***** (Shouvik Sur, Haoyu Hu, Silke Paschen, Jennifer Cano, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08761">https://arxiv.org/abs/2307.08761</a></span> Exotic quantum liquids in Bose-Hubbard models with spatially-modulated symmetries *** (Yizhi You, Olexei Motrunich)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.08936">https://arxiv.org/abs/2307.08936</a></span> Renormalization Group-Motivated Learning</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09215">https://arxiv.org/abs/2307.09215</a></span> Lecture Notes on Generalized Symmetries and Applications *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07883">https://arxiv.org/abs/2302.07883</a></span> Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid ****** (<b>SangEun Han</b>, Daniel J. Schultz, Yong Baek Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20230720</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09519">https://arxiv.org/abs/2307.09519</a></span> Impurity screening by defects in (1+1)d quantum critical systems ** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09884">https://arxiv.org/abs/2307.09884</a></span> Electrons in helical magnetic field: a new class of topological metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09876">https://arxiv.org/abs/2307.09876</a></span> Hyperbolic non-Abelian semimetal *** (Titus Neupert, Joseph Maciejko)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09500">https://arxiv.org/abs/2307.09500</a></span> Exact hole-induced SU(N) flavor-singlets in certain U = ∞ SU(N) Hubbard models **** (Kyung-Su Kim, Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09935">https://arxiv.org/abs/2307.09935</a></span> Dynamical Onset of Light-Induced Unconventional Superconductivity – a Yukawa-Sachdev-Ye-Kitaev study *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.09843">https://arxiv.org/abs/2307.09843</a></span> Lieb-Schultz-Mattis theorem for 1d quantum magnets with antiunitary translation and inversion symmetries ***** (Yuan Yao, Linhao Li, Masaki Oshikawa, Chang-Tse Hsieh)</p>
+<p class="p2"><br></p>
+<p class="p1">20230721</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.10364">https://arxiv.org/abs/2307.10364</a></span> Spin Space Groups: Full Classification and Applications ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.10371">https://arxiv.org/abs/2307.10371</a></span> Enumeration of spin-space groups: Towards a complete description of symmetries of magnetic orders *** (Chen Fang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11053">https://arxiv.org/abs/2307.11053</a></span> Random insights into the complexity of two-dimensional tensor network calculations *** (Timothy H. Hsieh, Andrew C. Potter, Romain Vasseur)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.10353">https://arxiv.org/abs/2307.10353</a></span> Quantum computation from dynamic automorphism codes ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.10791">https://arxiv.org/abs/2307.10791</a></span> Real-frequency quantum field theory applied to the single-impurity Anderson model **** (Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.10389">https://arxiv.org/abs/2307.10389</a></span> Magnetization amplification in the interlayer pairing superconductor 4Hb-TaS2 **** (Chunxiao Liu, Shubhayu Chatterjee, Thomas Scaffidi, Erez Berg, Ehud Altman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11296">https://arxiv.org/abs/2306.11296</a></span> ChatGPT Chemistry Assistant for Text Mining and Prediction of MOF Synthesis</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01388">https://arxiv.org/abs/2211.01388</a></span> Sublattice Interference promotes Pair Density Wave order in Kagome Metals ***** (Yi-Ming Wu, Ronny Thomale, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01087">https://arxiv.org/abs/2101.01087</a></span> Quantum Criticality Enabled by Intertwined Degrees of Freedom *****(Chia-Chuan Liu, Silke Paschen, Qimiao Si)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
