--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ Articles related to my works:
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://kaistcompass.kaist.ac.kr/?issues=fall-2019&magazine=studies-of-an-emergent-anisotropic-non-fermi-liquid-at-a-topological-phase-transition-in-three-dimensions">KAIST Compass 2019 Fall (Newsletter of College of Natural Science)</a>
 <br>
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://webzine.kps.or.kr/contents/data/webzine/webzine/15717908831.pdf">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://webzine.kps.or.kr/inc/down.php?fileIdx=9676">Physics & High Technology 2019 <b>09</b> (KPS Webzine, in Korean)</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=10035&sid=5161bc5f73a28975817be2598ff36c06&module_srl=5863">KAIST Department of Physics Newsletter Fall 2018, Vol. 07 (in Korean)</a><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://physics.kaist.ac.kr/?module=file&act=procFileDownload&file_srl=8883&sid=76fbd0b673404c756b4a634cbf4bb98a&module_srl=5863">KAIST Department of Physics Newsletter Autumn 2017, Vol. 05 (in Korean)</a><br><br>
 <!--Blog: <a href="/blog/">here</a>-->
