--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	-->
 		<li><b>[Sep. 2023]</b> I will join <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
 			</li>
+		<li><b>[May 2023]</b> My paper <a href="https://journals.aps.org/prb/accepted/1d07bY85Rd51cd8847e84de2a9e2a5ec59f26c720" style="font-style: italic;">"Theory of Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> has been accepted as a <span style="font-style: italic;">Letter</span> in <span style="font-style: italic;">Physical Review B</span>.
+			</li>
 		<li><b>[Jul. 2023]</b> I have given a poster presentation <a href="https://smart.sces2023.org/main/session_detail.htm?stab=2&topic_initial=T05&class_code=1&dtype=Poster" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" (5-1952)</a>, at <span style="font-style: italic;"><a href="https://www.sces2023.org/">Jul 3 (Mon) 12:15-13:45, Place: Premier Ballroom C (2F), International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023)</a>, Songdo, South Korea</span>.
 			</li>
 		<li><b>[Jun. 2023]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)"> My paper</a> <a href="https://doi.org/10.1103/PhysRevB.107.235153" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a> has been published on Physical Review B!
@@ -128,7 +130,28 @@ Articles related to my works:
 		</li>
 		<!-- -->
 				<!-- -->
-				<li><div class="paper_title" style="display: flex;">
+		  		<li><div>
+		  		<span class="cvitem"> <a href="https://arxiv.org/abs/2207.07661" style="text-decoration:none;color:var(--font-color)">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials"</a>&nbsp<div class="bouncing-text" style="display: inline-block;">
+		  		  <div class="Psign8" style="display: inline-block;">D</div>
+		  		  <div class="Psign1" style="display: inline-block;float: left;">A</div>
+		  		  <div class="Psign2" style="display: inline-block;float: left;">C</div>
+		  		  <div class="Psign3" style="display: inline-block;float: left;">C</div>
+		  		  <div class="Psign4" style="display: inline-block;float: left;">E</div>
+		  		  <div class="Psign5" style="display: inline-block;float: left;">P</div>
+		  		  <div class="Psign6" style="display: inline-block;float: left;">T</div>
+		  		  <div class="Psign7" style="display: inline-block;float: left;">E</div>
+		  		  <div class="shadow"></div></span>
+		  		<span class="cvperiod"></span>
+		  		</div>
+		  		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+		  			<a href="https://journals.aps.org/prb/accepted/1d07bY85Rd51cd8847e84de2a9e2a5ec59f26c720" style="text-decoration:none;color:var(--font-color)">Accpedted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+		    <label>
+		      <input type="checkbox">
+		      <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/Ce_2KD_QPT.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
+		    </label>
+		  </div>Recent experiments on heavy fermion systems with higher-rank multipolar local moments provide a new platform to study such questions. In particular, experiments on Ce<sub>3</sub>Pd<sub>20</sub>(Si,Ge)<sub>6</sub> show novel quantum critical behaviors via two consecutive magnetic field-driven quantum phase transitions. At each transition, the derivative of the Hall conductivity jumps discontinuously, which was attributed to sequential Fermi surface reconstructions. Motivated by this discovery, we consider a microscopic model of itinerant electrons coupled to local dipolar, quadrupolar, and octupolar moments arising from Ce<sup>3+</sup> ions. Using renormalization group analyses, we demonstrate that numerous transitions can occur depending on which multipolar moments participate in the Fermi surface and which other moments are decoupled via Kondo destruction, and identify order parameters consistent with experiments. Our work offers a new theoretical framework for understanding multipolar quantum materials.</span></details></div>
+		  		</li>
+		  <li><div class="paper_title" style="display: flex;">
 				<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 		  <div class="sign3" style="display: inline-block;">W</div>
 		  <div class="sign1" style="display: inline-block;float: left;">N</div>
@@ -157,18 +180,6 @@ Articles related to my works:
 				</li>
 				<!-- -->
 		<li><div>
-		<span class="cvitem"> <a href="https://arxiv.org/abs/2207.07661" style="text-decoration:none;color:var(--font-color)">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials"</a></span>
-		<span class="cvperiod"></span>
-		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-			<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
-  <label>
-    <input type="checkbox">
-    <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/Ce_2KD_QPT.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
-  </label>
-</div>Recent experiments on heavy fermion systems with higher-rank multipolar local moments provide a new platform to study such questions. In particular, experiments on Ce<sub>3</sub>Pd<sub>20</sub>(Si,Ge)<sub>6</sub> show novel quantum critical behaviors via two consecutive magnetic field-driven quantum phase transitions. At each transition, the derivative of the Hall conductivity jumps discontinuously, which was attributed to sequential Fermi surface reconstructions. Motivated by this discovery, we consider a microscopic model of itinerant electrons coupled to local dipolar, quadrupolar, and octupolar moments arising from Ce<sup>3+</sup> ions. Using renormalization group analyses, we demonstrate that numerous transitions can occur depending on which multipolar moments participate in the Fermi surface and which other moments are decoupled via Kondo destruction, and identify order parameters consistent with experiments. Our work offers a new theoretical framework for understanding multipolar quantum materials.</span></details></div>
-			<!-- <div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
-		</li><li><div>
 		<span class="cvitem"> <a href="https://doi.org/10.1103/PhysRevB.106.155155" style="text-decoration:none;color:var(--font-color)">"Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments"</a> </span>
 		<span class="cvperiod"></span>
 		</div>
