--- a/arxiv/2023_07_arxiv.html
+++ b/arxiv/2023_07_arxiv.html
@@ -180,6 +180,63 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.11296">https://arxiv.org/abs/2306.11296</a></span> ChatGPT Chemistry Assistant for Text Mining and Prediction of MOF Synthesis</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.01388">https://arxiv.org/abs/2211.01388</a></span> Sublattice Interference promotes Pair Density Wave order in Kagome Metals ***** (Yi-Ming Wu, Ronny Thomale, S. Raghu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2101.01087">https://arxiv.org/abs/2101.01087</a></span> Quantum Criticality Enabled by Intertwined Degrees of Freedom *****(Chia-Chuan Liu, Silke Paschen, Qimiao Si)</p>
+<br>
+<p class="p1">20230724</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11169">https://arxiv.org/abs/2307.11169</a></span> Interaction-mitigated Landau damping *** (Roderich Moessner, Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11324">https://arxiv.org/abs/2307.11324</a></span> Stochastic pole expansion method ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14973">https://arxiv.org/abs/2303.14973</a></span> Optical transitions of a single nodal ring in SrAs3: radially and axially resolved characterization (Jun Sung Kim, Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10688">https://arxiv.org/abs/2207.10688</a></span> Probing dynamics of a two-dimensional dipolar spin ensemble using single qubit sensor *** (Soonwon Choi, Mikhail D. Lukin, Alexander O. Sushkov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14011">https://arxiv.org/abs/2212.14011</a></span> Massless graviton in a model of quantum gravity with emergent spacetime ***** (Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20230725</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11810">https://arxiv.org/abs/2307.11810</a></span> Complex magnetic and spatial symmetry breaking from correlations in kagome flat bands ***** (Yu-Ping Lin, Chunxiao Liu, Joel E. Moore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12528">https://arxiv.org/abs/2307.12528</a></span> Quantum Geometry and Landau Levels of Quadratic Band Crossings **** (Junseo Jung, Hyeongmuk Lim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12223">https://arxiv.org/abs/2307.12223</a></span> Green’s Function Zeros in Fermi Surface Symmetric Mass Generation ***** (Da-Chuan Lu, Meng Zeng, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12927">https://arxiv.org/abs/2307.12927</a></span> Quantum Duality in Electromagnetism and the Fine-Structure Constant</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11820">https://arxiv.org/abs/2307.11820</a></span> Fragmented superconductivity in the Hubbard model as solitons in Ginzburg-Landau theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11898">https://arxiv.org/abs/2307.11898</a></span> Magnetism and topological property in icosahedral quasicrystal ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11979">https://arxiv.org/abs/2307.11979</a></span> Magnetism and superconductivity in doped triangular-lattice Mott insulators (Kun Woo Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.11996">https://arxiv.org/abs/2307.11996</a></span> Unconventional quantum criticality in a non-Hermitian extended Kitaev chain</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12295">https://arxiv.org/abs/2307.12295</a></span> Spin-Peierls instability of the U(1) Dirac spin liquid (Frank Pollmann, Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12509">https://arxiv.org/abs/2307.12509</a></span> Edge Theories for Anyon Condensation Phase Transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12784">https://arxiv.org/abs/2307.12784</a></span> The Spin Point Groups and their Representations (Paul McClarty)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12320">https://arxiv.org/abs/2307.12320</a></span> Action for classical, quantum, closed and open systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12368">https://arxiv.org/abs/2307.12368</a></span> S-Matrix Path Integral Approach to Symmetries and Soft Theorems (Seolhwa Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12008">https://arxiv.org/abs/2307.12008</a></span> The First Room-Temperature Ambient-Pressure Superconductor (Hmm…?)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.12037">https://arxiv.org/abs/2307.12037</a></span> Superconductor Pb10-xCux(PO4)6O showing levitation at room temperature and atmospheric pressure and mechanism (Hmmm…?)</p>
+<p class="p2"><br></p>
+<p class="p1">20230726</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13038">https://arxiv.org/abs/2307.13038</a></span> Charge and Entanglement Criticality in a U(1)-Symmetric Hybrid Circuit of Qubits (Justin H. Wilson, J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13031">https://arxiv.org/abs/2307.13031</a></span> Supersymmetry on the honeycomb lattice: resonating charge stripes, superfrustration, and domain walls (S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13030">https://arxiv.org/abs/2307.13030</a></span> Superconductivity in twisted bilayer graphene: possible pairing symmetries, impurity-induced states and Chern number ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13169">https://arxiv.org/abs/2307.13169</a></span> Competing phases and intertwined orders in coupled wires near the self-dual point *** (Kun Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13056">https://arxiv.org/abs/2307.13056</a></span> Graviton propagators in AdS beyond GR: heat kernel approach ****</p>
+<p class="p2"><br></p>
+<p class="p1">20230727</p>
+<p class="p3"><a href="https://arxiv.org/abs/2307.14196">https://arxiv.org/abs/2307.14196</a><span class="s2"> Topological Insulators **</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13889">https://arxiv.org/abs/2307.13889</a></span> A stable, critical phase induced by Berry phase and dissipation in a spin-chain **** (Tarun Grover)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14191">https://arxiv.org/abs/2307.14191</a></span> Randomized higher-order tensor renormalization group</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14330">https://arxiv.org/abs/2307.14330</a></span> Effective-Hamiltonian theory: An approximation to the equilibrium state of open quantum systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14254">https://arxiv.org/abs/2307.14254</a></span> Deconfined pseudocriticality in a model spin-1 quantum antiferromagnet</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.13725">https://arxiv.org/abs/2307.13725</a></span> Unconventional spin transport in strongly correlated kagome systems (Frank Pollmann, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14248">https://arxiv.org/abs/2307.14248</a></span> Criteria and analytical results for the Pseudogap at the Van Hove point in two dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11622">https://arxiv.org/abs/2211.11622</a></span> Fractionalization in Fractional Correlated Insulating States at n ± 1/3 filled twisted bilayer graphene (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.11422">https://arxiv.org/abs/2211.11422</a></span> Breakdown of the Meissner effect at the zero exceptional point in non-Hermitian two-band BCS model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14301">https://arxiv.org/abs/2307.14301</a></span> A primer on Higgs Effective Field Theory with Geometry</p>
+<p class="p2"><br></p>
+<p class="p1">20230728</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14845">https://arxiv.org/abs/2307.14845</a></span> Eigenenergy braids in 2D photonic crystals *** (Shanhui Fan)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14960">https://arxiv.org/abs/2307.14960</a></span> Spectroscopy and topological properties of a Haldane light system (Karyn Le Hur)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14370">https://arxiv.org/abs/2307.14370</a></span> Views on gravity from condensed matter physics ***** (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14602">https://arxiv.org/abs/2307.14602</a></span> Supersymmetric conformal field theories from quantum stabilizer codes ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14627">https://arxiv.org/abs/2307.14627</a></span> Preparation of Entangled Many-Body States with Machine Learning ***** (Donggyu Kim, Eun-Gook Moon)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14415">https://arxiv.org/abs/2307.14415</a></span> Reappearance of Thermalization Dynamics in the Late-Time Spectral Form Factor *** (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14835">https://arxiv.org/abs/2307.14835</a></span> Frustration-Induced Superconductivity in the t-t′ Hubbard Model (Jan von Delft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14819">https://arxiv.org/abs/2307.14819</a></span> High-temperature superconductivity with zero-resistance and strange metal behaviour in La3Ni2O7 ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14965">https://arxiv.org/abs/2307.14965</a></span> Interlayer coupling driven high-temperature superconductivity in La3Ni2O7 under pressure ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14563">https://arxiv.org/abs/2307.14563</a></span> Quantum Phase Transition of Organic Spin Liquid Tuned by Mixing Counterions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05238">https://arxiv.org/abs/2301.05238</a></span> Quantum criticality under decoherence or weak measurement ***** (Jong Yeon Lee, Chao-Ming Jian, Cenke Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14310">https://arxiv.org/abs/2209.14310</a></span> Multiband mean-field theory of the d + ig superconductivity scenario in Sr2 RuO4 *** (Andrew C. Yuan, Erez Berg, Steven A. Kivelson)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
