--- a/arxiv/2023_07_arxiv.html
+++ b/arxiv/2023_07_arxiv.html
@@ -237,6 +237,13 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.14563">https://arxiv.org/abs/2307.14563</a></span> Quantum Phase Transition of Organic Spin Liquid Tuned by Mixing Counterions ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05238">https://arxiv.org/abs/2301.05238</a></span> Quantum criticality under decoherence or weak measurement ***** (Jong Yeon Lee, Chao-Ming Jian, Cenke Xu)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.14310">https://arxiv.org/abs/2209.14310</a></span> Multiband mean-field theory of the d + ig superconductivity scenario in Sr2 RuO4 *** (Andrew C. Yuan, Erez Berg, Steven A. Kivelson)</p>
+<br>
+<p class="p1">20230731</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.15119">https://arxiv.org/abs/2307.15119</a></span> Nematic metal in a multi-valley electron gas: Variational Monte Carlo analysis and application to AlAs (Steven A. Kivelson, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.15689">https://arxiv.org/abs/2307.15689</a></span> Engineering entanglement geometry via spacetime-modulated measurements *** (Xiao-Liang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.15149">https://arxiv.org/abs/2307.15149</a></span> Restoring permutational invariance in the Jordan-Wigner transformation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.15706">https://arxiv.org/abs/2307.15706</a></span> Type II t-J model and shared antiferromagnetic spin coupling from Hund’s rule in superconducting La3Ni2O7 **** (Hanbit Oh, Ya-Hui Zhang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.15680">https://arxiv.org/abs/2307.15680</a></span> Crossover from Non-Fermi-Liquid to Pseudogap Behavior in the Spectral of Local Impurity in Power-Law Diverging Multichannel Kondo Model *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
