--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	-->
 		<li><b>[Sep. 2023]</b> I will join <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
 			</li>
-		<li><b>[May 2023]</b> My paper <a href="https://journals.aps.org/prb/accepted/1d07bY85Rd51cd8847e84de2a9e2a5ec59f26c720" style="font-style: italic;">"Theory of Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> has been accepted as a <span style="font-style: italic;">Letter</span> in <span style="font-style: italic;">Physical Review B</span>.
+		<li><b>[Aug. 2023]</b> My paper <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.L060401" style="font-style: italic;">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> has been published in <span style="font-style: italic;">Physical Review B</span> as a <span style="font-style: italic;">Letter</span>.
+			</li>
+		<li><b>[Jul. 2023]</b> My paper <a href="https://journals.aps.org/prb/accepted/1d07bY85Rd51cd8847e84de2a9e2a5ec59f26c720" style="font-style: italic;">"Theory of Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> has been accepted as a <span style="font-style: italic;">Letter</span> in <span style="font-style: italic;">Physical Review B</span>.
 			</li>
 		<li><b>[Jul. 2023]</b> I have given a poster presentation <a href="https://smart.sces2023.org/main/session_detail.htm?stab=2&topic_initial=T05&class_code=1&dtype=Poster" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" (5-1952)</a>, at <span style="font-style: italic;"><a href="https://www.sces2023.org/">Jul 3 (Mon) 12:15-13:45, Place: Premier Ballroom C (2F), International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023)</a>, Songdo, South Korea</span>.
 			</li>
-		<li><b>[Jun. 2023]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)"> My paper</a> <a href="https://doi.org/10.1103/PhysRevB.107.235153" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a> has been published on Physical Review B!
+		<li><b>[Jun. 2023]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)"> My paper</a> <a href="https://doi.org/10.1103/PhysRevB.107.235153" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a> has been published in Physical Review B!
 		</li><li><b>[Jun. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2306.14955" style="font-style: italic;">"Bosonization of Non-Fermi Liquids (arXiv:2306.14955)"</a> has been posted on arXiv!
 		</li>
 		<li><b>[Jun. 2023]</b> I have given a talk <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">ASG Mini-workshop, Daejeon, South Korea</span>.
@@ -88,7 +90,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</li>
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230728_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/07/28)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230808_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/08/08)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -131,20 +133,21 @@ Articles related to my works:
 		<!-- -->
 				<!-- -->
 		  		<li><div>
-		  		<span class="cvitem"> <a href="https://arxiv.org/abs/2207.07661" style="text-decoration:none;color:var(--font-color)">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials"</a>&nbsp<div class="bouncing-text" style="display: inline-block;">
-		  		  <div class="Psign8" style="display: inline-block;">D</div>
-		  		  <div class="Psign1" style="display: inline-block;float: left;">A</div>
-		  		  <div class="Psign2" style="display: inline-block;float: left;">C</div>
-		  		  <div class="Psign3" style="display: inline-block;float: left;">C</div>
-		  		  <div class="Psign4" style="display: inline-block;float: left;">E</div>
-		  		  <div class="Psign5" style="display: inline-block;float: left;">P</div>
-		  		  <div class="Psign6" style="display: inline-block;float: left;">T</div>
-		  		  <div class="Psign7" style="display: inline-block;float: left;">E</div>
+		  		<span class="cvitem"> <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.L060401" style="text-decoration:none;color:var(--font-color)">"Quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>&nbsp<div class="bouncing-text" style="display: inline-block;">
+		  <div class="Psign9" style="display: inline-block;">D</div>
+		  <div class="Psign1" style="display: inline-block;float: left;">P</div>
+		  <div class="Psign2" style="display: inline-block;float: left;">U</div>
+		  <div class="Psign3" style="display: inline-block;float: left;">B</div>
+		  <div class="Psign4" style="display: inline-block;float: left;">L</div>
+		  <div class="Psign5" style="display: inline-block;float: left;">I</div>
+		  <div class="Psign6" style="display: inline-block;float: left;">S</div>
+		  <div class="Psign7" style="display: inline-block;float: left;">H</div>
+		  <div class="Psign8" style="display: inline-block;float: left;">E</div>
 		  		  <div class="shadow"></div></span>
 		  		<span class="cvperiod"></span>
 		  		</div>
 		  		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-		  			<a href="https://journals.aps.org/prb/accepted/1d07bY85Rd51cd8847e84de2a9e2a5ec59f26c720" style="text-decoration:none;color:var(--font-color)">Accpedted in Phys. Rev. B</a> (<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+		  			<a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.108.L060401">Phys. Rev. B <b>108</b>, L060401 (2023)</a> (<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		    <label>
 		      <input type="checkbox">
 		      <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/Ce_2KD_QPT.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
@@ -170,7 +173,7 @@ Articles related to my works:
 					</span>
 				<span class="cvperiod"></span></div>
 				<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-					<a href="https://doi.org/10.1103/PhysRevB.107.235153" style="text-decoration:none;color:var(--font-color)">Phys. Rev. B <b>107</b>, 235153 (2023)</a> (<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+					<a href="https://doi.org/10.1103/PhysRevB.107.235153">Phys. Rev. B <b>107</b>, 235153 (2023)</a> (<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
 		    <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
